[gd_scene load_steps=3 format=3 uid="uid://bn6y1s7uddbi"]

[ext_resource type="Script" path="res://main.gd" id="1_g365s"]
[ext_resource type="PackedScene" uid="uid://dxqovxiw5f0ej" path="res://main_menu.tscn" id="2_raj16"]

[node name="Main" type="Node"]
script = ExtResource("1_g365s")

[node name="MainMenu" parent="." instance=ExtResource("2_raj16")]

[connection signal="quit_game" from="MainMenu" to="." method="_on_main_menu_quit_game"]
[connection signal="start_game" from="MainMenu" to="." method="_on_main_menu_start_game"]
